tests/parse_only/errors/syn_lex/e7.src
.IPPcode21

STRLEN GF@v string@absda
